--- a/.github/actions/setup-npmrc/action.yml
+++ b/.github/actions/setup-npmrc/action.yml
@@ -21,4 +21,4 @@ runs:
         echo ""//npm.pkg.github.com/:_authToken=${INPUTS_GITHUB_TOKEN}"" >> ~/.npmrc
         echo ""@google:registry=https://wombat-dressing-room.appspot.com"" >> ~/.npmrc
       env:
-        INPUTS_GITHUB_TOKEN: ${{ inputs.github-token }}
+        INPUTS_GITHUB_TOKEN: '${{ inputs.github-token }}'
