--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -71,7 +71,10 @@ rules:
     forbid-implicit-octal: true
     forbid-explicit-octal: false
 
-  quoted-strings: 'disable'
+  quoted-strings:
+    quote-type: 'single'
+    required: true
+    allow-quoted-quotes: true
 
   trailing-spaces: {}
 
