refactor(core): replace manual syncPlanModeTools with declarative policy rules
Unified plan-related tool visibility management by leveraging the existing Policy Engine instead of imperative registration/unregistration.

Key changes:
- Removed syncPlanModeTools from Config class and its calls during initialization and mode transitions.
- Added declarative DENY rules to plan.toml, write.toml, and yolo.toml to control enter_plan_mode and exit_plan_mode visibility based on the current ApprovalMode.
- Updated Config.createToolRegistry to always register plan tools if the feature is enabled.
- Refactored updateApprovalMode to refresh the model's toolset via geminiClient.setTools() when transitioning between modes.
- Updated tests to reflect policy-based filtering and removed obsolete sync tests.

Closes https://github.com/google-gemini/gemini-cli/issues/20595

--- a/packages/core/src/policy/policies/plan.toml
+++ b/packages/core/src/policy/policies/plan.toml
@@ -55,6 +55,13 @@ decision = "ask_user"
 priority = 70
 modes = ["plan"]
 
+[[rule]]
+toolName = "enter_plan_mode"
+decision = "deny"
+priority = 70
+modes = ["plan"]
+deny_message = "You are already in Plan Mode."
+
 # Allow write_file and replace for .md files in the plans directory (cross-platform)
 [[rule]]
 toolName = ["write_file", "replace"]
