--- a/packages/core/src/policy/policies/write.toml
+++ b/packages/core/src/policy/policies/write.toml
@@ -32,6 +32,13 @@ decision = "ask_user"
 priority = 10
 
 [[rule]]
+toolName = "exit_plan_mode"
+decision = "deny"
+priority = 10
+modes = ["default", "autoEdit"]
+deny_message = "You are not in Plan Mode."
+
+[[rule]]
 toolName = "replace"
 decision = "allow"
 priority = 15
