--- a/packages/a2a-server/package.json
+++ b/packages/a2a-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@google/gemini-cli-a2a-server",
-  "version": "0.31.0-preview.2",
+  "version": "0.33.0-nightly.20260227.ba149afa0",
   "description": "Gemini CLI A2A Server",
   "repository": {
     "type": "git",
