--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@google/gemini-cli-core",
-  "version": "0.31.0-preview.2",
+  "version": "0.33.0-nightly.20260227.ba149afa0",
   "description": "Gemini CLI Core",
   "license": "Apache-2.0",
   "repository": {
