--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@google/gemini-cli-devtools",
-  "version": "0.31.0-preview.2",
+  "version": "0.33.0-nightly.20260227.ba149afa0",
   "license": "Apache-2.0",
   "type": "module",
   "main": "dist/src/index.js",
