--- a/packages/vscode-ide-companion/package.json
+++ b/packages/vscode-ide-companion/package.json
@@ -2,7 +2,7 @@
   "name": "gemini-cli-vscode-ide-companion",
   "displayName": "Gemini CLI Companion",
   "description": "Enable Gemini CLI with direct access to your IDE workspace.",
-  "version": "0.31.0-preview.2",
+  "version": "0.33.0-nightly.20260227.ba149afa0",
   "publisher": "google",
   "icon": "assets/icon.png",
   "repository": {
