--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -44,7 +44,6 @@
     "comment-json": "^4.2.5",
     "diff": "^8.0.3",
     "dotenv": "^17.1.0",
-    "extract-zip": "^2.0.1",
     "fzf": "^0.5.2",
     "glob": "^12.0.0",
     "highlight.js": "^11.11.1",
@@ -55,6 +54,7 @@
     "lowlight": "^3.3.0",
     "mnemonist": "^0.40.3",
     "open": "^10.1.2",
+    "pixelmatch": "^7.1.0",
     "prompts": "^2.4.2",
     "proper-lockfile": "^4.1.2",
     "react": "^19.2.0",
@@ -63,7 +63,6 @@
     "string-width": "^8.1.0",
     "strip-ansi": "^7.1.0",
     "strip-json-comments": "^3.1.1",
-    "tar": "^7.5.8",
     "tinygradient": "^1.1.5",
     "undici": "^7.10.0",
     "ws": "^8.16.0",
@@ -81,7 +80,19 @@
     "@types/ws": "^8.5.10",
     "@types/yargs": "^17.0.32",
     "@xterm/headless": "^5.5.0",
+    "color-name": "^1.1.4",
+    "extract-zip": "^2.0.1",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
+    "joi": "^18.0.2",
+    "local-pkg": "^1.1.2",
+    "pac-proxy-agent": "^7.2.0",
+    "proxy-agent": "^6.5.0",
+    "proxy-from-env": "^2.0.0",
+    "socks-proxy-agent": "^8.0.5",
+    "tar": "^7.5.9",
     "typescript": "^5.3.3",
+    "unbzip2-stream": "^1.4.3",
     "vitest": "^3.1.1"
   },
   "engines": {
