--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,6 +48,7 @@
     "@opentelemetry/sdk-trace-node": "^2.5.0",
     "@opentelemetry/semantic-conventions": "^1.39.0",
     "@types/html-to-text": "^9.0.4",
+    "@types/proper-lockfile": "^4.1.4",
     "@xterm/headless": "5.5.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.0",
@@ -65,6 +66,7 @@
     "ignore": "^7.0.0",
     "js-yaml": "^4.1.1",
     "marked": "^15.0.12",
+    "mathjs": "^15.1.1",
     "mime": "4.0.7",
     "mnemonist": "^0.40.3",
     "open": "^10.1.2",
